--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,6 +243,10 @@ main > .section:first-of-type {
   margin-top: 0;
 }
 
+.video-text {
+  width: 100%;
+}
+
 @media (width >= 900px) {
   main > .section > div {
     padding: 0 32px;
