--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,8 +243,8 @@ main > .section:first-of-type {
   margin-top: 0;
 }
 
-.video-text {
-  width: 100%;
+.video-text .video {
+  max-width: 100%;
 }
 
 @media (width >= 900px) {
