--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,12 +103,21 @@ h1,
 h2,
 h3,
 h4,
-h5,
+h5 {
+  margin-top: 2.8em;
+  margin-bottom: 0.25em;
+  font-family: var(--heading-font-family);
+  font-weight: 600;
+  line-height: 1.25;
+  scroll-margin: 40px;
+},
 h6 {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
+  color: var(--background-color);
   font-weight: 600;
+  font-style: light;
   line-height: 1.25;
   scroll-margin: 40px;
 }
