--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,9 +109,8 @@ h5 {
   margin-left: 3em;
   font-family: var(--heading-font-family);
   font-weight: 600;
-  line-height: 0.25;
   color: var(--background-color);
-  font-style: light;
+  font-style: thin;
   scroll-margin: 40px;
 },
 h6 {
@@ -127,7 +126,7 @@ h1 { font-size: var(--heading-font-size-xxl); }
 h2 { font-size: var(--heading-font-size-xl); }
 h3 { font-size: var(--heading-font-size-l); }
 h4 { font-size: var(--heading-font-size-m); }
-h5 { font-size: var(--heading-font-size-s); }
+h5 { font-size: var(--heading-font-size-m); }
 h6 { font-size: var(--heading-font-size-xs); }
 
 p,
