--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,8 +103,7 @@ h1,
 h2,
 h3,
 h4 {
-  margin: auto;
-  width: 50%;
+  justify-content: center;
   font-family: var(--heading-font-family);
   font-weight: 300;
   color: var(--background-color);
