--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,6 +104,7 @@ h2,
 h3,
 h4 {
   justify-content: center;
+  text-align: middle;
   font-family: var(--heading-font-family);
   font-weight: 300;
   color: var(--background-color);
@@ -119,7 +120,7 @@ h5 {
   font-weight: 200;
   color: var(--background-color);
   line-height: 0.25;
-  font-style: var(--heading-font-size-m);
+  font-style: var(--heading-font-size-l);
   scroll-margin: 40px;
 },
 h6 {
