--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,7 @@ h4 {
   line-height: 0.25;
   font-style: var(--heading-font-size-m);
   scroll-margin: 40px;
-},
+}
 h5 {
   margin-top: 2.8em;
   margin-bottom: 0.25em;
@@ -122,7 +122,7 @@ h5 {
   line-height: 0.25;
   font-style: var(--heading-font-size-l);
   scroll-margin: 40px;
-},
+}
 h6 {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
