--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,8 +103,9 @@ h1,
 h2,
 h3,
 h4 {
+  display: flex;
   justify-content: center;
-  text-align: middle;
+  align-items: center;
   font-family: var(--heading-font-family);
   font-weight: 300;
   color: var(--background-color);
