--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,6 +108,7 @@ h4 {
   align-items: center;
   font-family: var(--heading-font-family);
   font-weight: 300;
+  font-family: sans-serif;
   color: var(--background-color);
   line-height: 0.25;
   font-style: var(--heading-font-size-m);
@@ -120,7 +121,7 @@ h5 {
   font-family: var(--heading-font-family);
   font-weight: 50;
   color: var(--background-color);
-  line-height: 0.25;
+  line-height: 25px;
   scroll-margin: 40px;
 }
 h6 {
@@ -197,7 +198,7 @@ button {
   padding: 0.5em 1.2em;
   font-family: var(--body-font-family);
   font-style: normal;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 1.25;
   text-align: center;
   text-decoration: none;
