--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,7 +121,7 @@ h5 {
   font-weight: 50;
   font-family: sans-serif;
   color: var(--background-color);
-  line-height: 25px;
+  line-height: 0.25;
   scroll-margin: 40px;
 }
 h6 {
@@ -137,7 +137,7 @@ h1 { font-size: var(--heading-font-size-xxl); }
 h2 { font-size: var(--heading-font-size-xl); }
 h3 { font-size: var(--heading-font-size-l); }
 h4 { font-size: var(--heading-font-size-m); }
-h5 { font-size: var(--heading-font-size-l); }
+h5 { font-size: var(--heading-font-size-m); }
 h6 { font-size: var(--heading-font-size-xs); }
 
 p,
