--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,7 +129,7 @@ h6 {
   justify-content: center;
   align-items: center;
   font-family: var(--heading-font-family);
-  font-weight: 200;
+  font-weight: 50;
   line-height: 0.25;
   color: var(--background-color);
   scroll-margin: 40px;
@@ -189,8 +189,12 @@ a:hover {
 }
 
 /* buttons */
+/* margin: 12px 0; */
 a.button:any-link,
 button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
