--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
 :root {
   /* colors */
   --background-color: white;
-  --light-color: #f8f8f8;
+  --light-color: #A80F26;
   --dark-color: #505050;
   --text-color: #131313;
   --link-color: #1F9EAF;
@@ -210,7 +210,6 @@ button {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  position: absolute;
 }
 
 a.button:hover,
