--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,14 +270,14 @@ main > .section:first-of-type {
 }
 
 .text-on-video-wrapper {
-  margin-top: -20%;
-    margin-bottom: 20%;
+  margin-top: -20% !important;
+    margin-bottom: 20% !important;
     text-align: right;
     font-size: 50px;
     font-weight: bold;
     color: #FFF;
     line-height: .4;
-    padding-right: 16%;
+    padding-right: 16% !important;
 }
 
 @media (width >= 900px) {
