--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,7 +275,7 @@ main > .section:first-of-type {
     text-align: right;
     font-size: 40px;
     font-weight: bold;
-    color: #FFF;
+    color: red;
     line-height: .4;
     padding-right: 16% !important;
 }
@@ -288,6 +288,12 @@ main > .section:first-of-type {
   .text-on-video-wrapper {
     margin-top: -32% !important;
     margin-bottom: 32% !important;
+    text-align: right;
+    font-size: 40px;
+    font-weight: bold;
+    color: red;
+    line-height: .4;
+    padding-right: 16% !important;
   }
 }
 
