--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   /* colors */
-  --background-color: white;
+  --background-color: #000;
   --light-color: #A80F26;
   --dark-color: #505050;
   --text-color: #131313;
@@ -108,10 +108,13 @@ h4 {
   align-items: center;
   font-family: var(--heading-font-family);
   font-weight: 300;
-  color: var(--background-color);
+  color: #fff;
   line-height: 0.25;
   font-style: var(--heading-font-size-m);
   scroll-margin: 40px;
+}
+h3 {
+  color: #000;
 }
 h5 {
   margin-top: 2.8em;
@@ -120,7 +123,7 @@ h5 {
   font-family: var(--heading-font-family);
   font-weight: 50;
   font-family: sans-serif;
-  color: var(--background-color);
+  color: #fff;
   line-height: 0.10%;
   scroll-margin: 40px;
 }
