--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   /* colors */
-  --background-color: #000;
+  --background-color: #fff;
   --light-color: #A80F26;
   --dark-color: #505050;
   --text-color: #131313;
