--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,10 +283,18 @@ main > .section:first-of-type {
     padding-right: 16% !important;
 }
 .banner {
-  background-color: #D51317 ;
+  background: #D51317 linear-gradient(242deg, #0D80C500 0%, #a51919 65%);
   color: #fff;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 14px;
+  font-size: 24px;
+  margin-top: -105px;
 }
+
+.banner p.buttun-container {
+  font-size: 18px !important;
+} 
 
 .banner::before{
   background-image: (242deg, #0D80C500 0%, #000607 65%);
