--- a/styles/styles.css
+++ b/styles/styles.css
@@ -317,6 +317,12 @@ main > .section:first-of-type {
   font-size: 30px;
 }
 
+.hero.text div {
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (width >= 900px) {
   main > .section > div {
     padding: 0 32px;
