--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,7 +318,7 @@ main > .section:first-of-type {
 }
 
 .hero.text div {
-  width: 900px;
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
