--- a/styles/styles.css
+++ b/styles/styles.css
@@ -324,7 +324,7 @@ main > .section:first-of-type {
 }
 
 .hero.text a {
-  box-sizing: border-box;
+    box-sizing: border-box;
     margin: 12px;
     display: inline-block;
     max-width: 100%;
@@ -343,6 +343,12 @@ main > .section:first-of-type {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    font-size: 18px;
+}
+
+.hero.text a:hover {
+  background-color: var(--background-color);
+  color: var(--link-color);
 }
 
 
