--- a/styles/styles.css
+++ b/styles/styles.css
@@ -384,6 +384,12 @@ main > .section:first-of-type {
   margin-bottom: 150px;
 }
 
+.tabs-tab {
+  border-radius: 10px 10px 0 0;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 @media (width >= 900px) {
   main > .section > div {
     padding: 0 32px;
