--- a/styles/styles.css
+++ b/styles/styles.css
@@ -385,9 +385,9 @@ main > .section:first-of-type {
 }
 
 .tabs-tab {
-  border-radius: 10px 10px 0 0;
-  padding-left: 25px;
-  padding-right: 25px;
+  border-radius: 10px 10px 0 0 !important;
+  padding-left: 25px !important;
+  padding-right: 25px !important;
 }
 
 @media (width >= 900px) {
